changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

common/readable.c, common/object.c, common/map.c, include/libproto.h: Use size_t
  instead of int for buffer sizes.
common/readable.c, include/libproto.h: Make some functions not used elsewhere
  static.
common/readable.c: Get rid of sprintf().
Arvid Norlander 2009-02-07

common/porting.c: Fix format string.
Arvid Norlander 2009-02-07

common/player.c: Remove unused variables.
Arvid Norlander 2009-02-07

types/mood_floor/mood_floor.c: Use NULL instead of 0 for pointers.
types/player_mover/player_mover.c: Assigning a floating point constant to an
  integer variable makes no sense.
Arvid Norlander 2009-02-07

include/libproto.h, include/ob_methods.h, include/typesproto.h,
  common/ob_methods.c, types/common/describe.c, types/legacy/legacy_describe.c:
  Use size_t when working with buffer sizes.
include/sproto.h, server/attack.c, server/spell_util.c: Attack type should be
  uint32 and not int.
Arvid Norlander 2009-02-07

types/shop_inventory/shop_inventory.c: Use size_t not int when working with
  list sizes. The variable i is used for several things, but using size_t should
  be safe for all uses of it.
Arvid Norlander 2009-02-07

types/deep_swamp/deep_swamp.c: Replace sprintf() with snprintf().
Arvid Norlander 2009-02-07

common/readable.c: Fix a snprintf() with non-constant format string and no
  parameters passed.
Arvid Norlander 2009-02-07

types/detector/detector.c: Fix GCC warning caused by a declaration of an
  unimplemented, unused static function.
Arvid Norlander 2009-02-07

plugins/cfpython/include/cfpython_object_private.h,